Ex. 3/11: Playing with co-body and parsing POST data

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/lucasbento/koa-playground#readme",
   "dependencies": {
+    "co-body": "^4.0.0",
     "koa": "^1.2.0"
   }
 }
