--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "homepage": "https://github.com/lucasbento/koa-playground#readme",
   "dependencies": {
-    "co-body": "^4.0.0",
-    "koa": "^1.2.0"
+    "koa": "^1.2.0",
+    "koa-bodyparser": "^2.0.1",
+    "koa-router": "^5.4.0"
   }
 }
