--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "koa": "^1.2.0",
     "koa-bodyparser": "^2.0.1",
-    "koa-router": "^5.4.0"
+    "koa-router": "^5.4.0",
+    "koa-session": "^3.3.1"
   }
 }
